# Atomic_Habits_Tracker

./: .env.sample  Dockerfile  README.md  pyproject.toml
config/: settings.py  urls.py
habit/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_initial.py  0003_remove_condition_minutes_to_complete_and_more.py  0004_alter_habit_options_and_more.py  0005_remove_condition_number_of_repetitions_and_more.py  0006_habit_last_send.py  0007_rename_last_send_habit_next_sending.py  0008_alter_condition_frequency_alter_habit_next_sending.py  0009_alter_habit_description_alter_habit_name.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_tg_nickname_user_tg_chat_id.py
